# spin_dynamics

./: .gitignore  LICENSE  README.md  pyproject.toml  simulation.traj
.github/workflows/: ci.yml  docs_deploy.yml
docs/: conf.py  index.rst  physics.rst  spindynam.rst
docs/_build/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  spindynam.html
docs/_build/.doctrees/: environment.pickle  index.doctree  modules.doctree  spindynam.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/spindynam/: calculator.html  cli.html  dynamics.html
docs/_build/_sources/: modules.rst.txt
spindynam/: __init__.py  calculator.py  cli.py
src/spindynam/: __init__.py  calculator.py  cli.py  dynamics.py
tests/: test_spin_dynamics.py
