[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "spindynam"
version = "0.1.0"
description = "Coupled Spin-Lattice Dynamics for ASE"
authors = [
    { name = "Antigravity", email = "antigravity@example.com" }
]
license = { text = "BSD-3-Clause" }
dependencies = [
    "ase>=3.28.0",
    "numpy",
    "pytest",
]
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "sphinx >= 7.2.6",
    "sphinx-immaterial >= 0.13.9",
    "myst-parser",
]

[project.scripts]
spin-dynamics = "spindynam.cli:main"
