[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "spindynam"
version = "0.1.0"
description = "Coupled Spin-Lattice Dynamics for ASE"
authors = [
    { name = "Alin M Elena", email = "[EMAIL_ADDRESS]" }
]
license = { text = "BSD-3-Clause" }
dependencies = [
    "ase>=3.22.0",
    "numpy",
    "pytest",
]
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "sphinx >= 7.2.6",
    "sphinx-immaterial >= 0.13.9",
    "myst-parser",
    "ruff",
    "pytest-cov",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=spindynam --cov-report=term-missing --cov-report=lcov"

[project.scripts]
spin-dynamics-run = "spindynam.cli:main"
